--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <label for="email">Email</label>
       <input id="email" name="email" />
 
-      <button onclick="logValues()">Log Values</button>
+      <button type="button" onclick="logValues()">Log Values</button>
     </form>
   </body>
 </html>
